More-or-less AllenNLP intro

--- a/AllenNLP_3.ipynb
+++ b/AllenNLP_3.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -224,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 360029/360029 [00:01<00:00, 180945.26it/s]\n"
+      "100%|██████████| 360029/360029 [00:01<00:00, 201617.92it/s]\n"
      ]
     }
    ],
@@ -243,13 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Vocabulary with namespaces:  tokens, Size: 19254 || labels, Size: 5 || Non Padded Namespaces: {'*tags', '*labels'}"
+       "Vocabulary with namespaces:  tokens, Size: 19254 || labels, Size: 5 || Non Padded Namespaces: {'*labels', '*tags'}"
       ]
      },
      "execution_count": 7,
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,8 +438,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import torch.optim as optim\n",
@@ -460,7 +462,8 @@
     "                      num_epochs=40,\n",
     "                      cuda_device=device)\n",
     "\n",
-    "    trainer.train()\n",
+    "    summary = trainer.train()\n",
+    "    model.summary = summary\n",
     "    pickle.dump(model, open('data/sentiment-model.pkl', 'wb'))\n",
     "else:\n",
     "    model = pickle.load(open('data/sentiment-model.pkl', 'rb'))"
@@ -477,31 +480,44 @@
     "accuracy: 0.7413, loss: 0.6492 ||: 100%|██████████| 1296/1296 [00:05&lt;00:00, 254.08it/s]\n",
     "accuracy: 0.7964, loss: 0.5178 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.46it/s]\n",
     "accuracy: 0.7970, loss: 0.5181 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 277.51it/s]\n",
-    "accuracy: 0.8358, loss: 0.4120 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.88it/s]\n",
-    "accuracy: 0.8067, loss: 0.4975 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 271.03it/s]\n",
-    "accuracy: 0.8496, loss: 0.3754 ||: 100%|██████████| 9956/9956 [01:12&lt;00:00, 136.46it/s]\n",
-    "accuracy: 0.8066, loss: 0.4897 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 280.46it/s]\n",
-    "accuracy: 0.8570, loss: 0.3547 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.44it/s]\n",
-    "accuracy: 0.8069, loss: 0.4912 ||: 100%|██████████| 1296/1296 [00:06&lt;00:00, 213.12it/s]\n",
-    "accuracy: 0.8622, loss: 0.3406 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 138.44it/s]\n",
-    "accuracy: 0.8068, loss: 0.4901 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 267.59it/s]\n",
-    "accuracy: 0.8665, loss: 0.3304 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.59it/s]\n",
-    "accuracy: 0.8059, loss: 0.4926 ||: 100%|██████████| 1296/1296 [00:05&lt;00:00, 255.59it/s]\n",
-    "accuracy: 0.8700, loss: 0.3216 ||: 100%|██████████| 9956/9956 [01:13&lt;00:00, 136.34it/s]\n",
-    "accuracy: 0.8022, loss: 0.5039 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 272.75it/s]\n",
-    "accuracy: 0.8731, loss: 0.3138 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.41it/s]\n",
-    "accuracy: 0.8041, loss: 0.5011 ||: 100%|██████████| 1296/1296 [00:05&lt;00:00, 219.63it/s]\n",
-    "accuracy: 0.8760, loss: 0.3070 ||: 100%|██████████| 9956/9956 [01:12&lt;00:00, 137.44it/s]\n",
-    "accuracy: 0.8023, loss: 0.5068 ||: 100%|██████████| 1296/1296 [00:05&lt;00:00, 241.51it/s]\n",
-    "accuracy: 0.8780, loss: 0.3009 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.44it/s]\n",
-    "accuracy: 0.8033, loss: 0.5104 ||: 100%|██████████| 1296/1296 [00:06&lt;00:00, 198.54it/s]\n",
-    "accuracy: 0.8806, loss: 0.2953 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.54it/s]\n",
-    "accuracy: 0.8005, loss: 0.5156 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 273.11it/s]\n",
+    "[...]\n",
     "accuracy: 0.8835, loss: 0.2892 ||: 100%|██████████| 9956/9956 [01:13&lt;00:00, 134.84it/s]\n",
     "accuracy: 0.8024, loss: 0.5155 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 279.73it/s]\n",
     "accuracy: 0.8853, loss: 0.2845 ||: 100%|██████████| 9956/9956 [01:11&lt;00:00, 139.16it/s]\n",
     "accuracy: 0.8023, loss: 0.5251 ||: 100%|██████████| 1296/1296 [00:04&lt;00:00, 296.28it/s]\n",
     "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               best_epoch | 0\n",
+      "       peak_cpu_memory_MB | 3764.46\n",
+      "     peak_gpu_0_memory_MB | 880\n",
+      "        training_duration | 00:11:43\n",
+      "     training_start_epoch | 0\n",
+      "          training_epochs | 9\n",
+      "                    epoch | 9\n",
+      "        training_accuracy | 0.9035601509187587\n",
+      "            training_loss | 0.2419995917267379\n",
+      "   training_cpu_memory_MB | 3764.46\n",
+      " training_gpu_0_memory_MB | 880\n",
+      "      validation_accuracy | 0.7900692450599561\n",
+      "          validation_loss | 0.5758982890107336\n",
+      " best_validation_accuracy | 0.8053417617680411\n",
+      "     best_validation_loss | 0.5114825434025584\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in model.summary.items():\n",
+    "    print(k.rjust(25), '|', v)"
    ]
   },
   {
@@ -517,39 +533,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  6.4 Very positive   | This is the best movie ever! \n",
-      "  2.7 Mildly positive\n",
+      "  6.2 Very positive   | This is the best movie ever! \n",
+      "  2.3 Mildly positive\n",
       "\n",
-      "  4.1 Very negative   | This is the worst movie ever! \n",
-      "  2.2 Mildly negative\n",
+      "  5.7 Very negative   | This is the worst movie ever! \n",
+      "  2.5 Mildly negative\n",
       "\n",
-      "  2.5 Mildly positive | The part that is good is not original, the part that is original is not good. \n",
-      "  0.9 Very positive\n",
+      "  0.9 Neutral         | The part that is good is not original, the part that is original is not good. \n",
+      "  0.8 Mildly positive\n",
       "\n",
-      "  1.6 Neutral         | A day that will live in infamy. \n",
-      "  0.3 Mildly positive\n",
+      "  1.8 Neutral         | A day that will live in infamy. \n",
+      "  1.2 Mildly positive\n",
       "\n",
-      "  2.3 Mildly positive | When one burns one's bridges, what a very nice fire it makes. \n",
-      "  1.1 Neutral\n",
+      "  1.5 Mildly positive | When one burns one's bridges, what a very nice fire it makes. \n",
+      "  1.2 Neutral\n",
       "\n",
-      "  1.5 Mildly positive | You will contract a rare disease. \n",
-      "  0.9 Neutral\n",
+      "  1.7 Mildly positive | You will contract a rare disease. \n",
+      "  0.5 Very positive\n",
       "\n",
-      "  1.8 Mildly negative | The only people for me are the mad one. \n",
-      "  1.7 Neutral\n",
+      "  2.2 Mildly negative | The only people for me are the mad one. \n",
+      "  1.4 Neutral\n",
       "\n",
-      "  1.1 Neutral         | Never give an inch! \n",
-      "  1.1 Mildly negative\n",
+      "  1.7 Mildly negative | Never give an inch! \n",
+      "  0.5 Neutral\n",
       "\n",
-      "  1.5 Mildly negative | This movie was actually neither that funny, nor super witty. \n",
-      "  0.7 Neutral\n",
+      "  1.4 Mildly negative | This movie was actually neither that funny, nor super witty. \n",
+      "  0.8 Very negative\n",
       "\n"
      ]
     }
@@ -601,24 +617,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'iterator' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-7ad2ee55c49f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m trainer = Trainer(model=model,\n\u001b[1;32m     12\u001b[0m                   \u001b[0moptimizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m                   \u001b[0miterator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m                   \u001b[0mtrain_dataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m                   \u001b[0mvalidation_dataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdev_dataset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'iterator' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.6899, loss: 1.5754 ||: 100%|██████████| 9956/9956 [00:58<00:00, 171.34it/s]\n",
+      "accuracy: 0.6829, loss: 1.5762 ||: 100%|██████████| 1296/1296 [00:05<00:00, 257.34it/s]\n",
+      "accuracy: 0.6875, loss: 1.5755 ||:  53%|█████▎    | 5281/9956 [00:32<00:20, 223.50it/s]"
      ]
     }
    ],
    "source": [
+    "# Same iterator\n",
+    "iterator = BucketIterator(batch_size=32, sorting_keys=[(\"tokens\", \"num_tokens\")])\n",
+    "iterator.index_with(vocab)\n",
+    "\n",
     "# Different optimizer\n",
     "optimizer = optim.RMSprop(model.parameters(), lr=1e-4, weight_decay=1e-5)\n",
     "\n",
