--- a/AllenNLP_0.ipynb
+++ b/AllenNLP_0.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 46175392/46175392 [00:05<00:00, 7810723.56B/s] \n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -114,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +137,7 @@
        "'Keanu Reeves, Laurence Fishburne, Carrie-Anne Moss, Hugo Weaving, and Joe Pantoliano'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,18 +184,19 @@
    "source": [
     "### Textual Entailment\n",
     "\n",
-    "We skip the `bash` versions for the rest of these examples.  They can be found at the AllenNLP demo web page linked above."
+    "We skip the `bash` versions for the rest of these examples.  They can be found at the AllenNLP demo web page linked above.  The [live demo](http://demo.allennlp.org/textual-entailment) visualizes results in a nice way."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "100%|██████████| 697657697/697657697 [01:03<00:00, 11046940.98B/s]\n",
       "WARNING:allennlp.nn.initializers:Did not use initialization regex that was passed: .*token_embedder_tokens\\._projection.*weight\n"
      ]
     },
@@ -208,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -234,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,19 +296,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Semantic Role Labeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 730942854/730942854 [01:02<00:00, 11784953.35B/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from allennlp.predictors.predictor import Predictor\n",
+    "predictor = Predictor.from_path(\"https://s3-us-west-2.amazonaws.com/allennlp/models/\"\n",
+    "                                \"srl-model-2018.05.25.tar.gz\")\n",
+    "resp = predictor.predict(\n",
+    "  sentence=\"Did Uriah honestly think he could beat the game in under three hours?\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DID \n",
+      "  [V: Did] Uriah honestly think he could beat the game in under three hours ? \n",
+      "\n",
+      "THINK \n",
+      "  Did [ARG0: Uriah] [ARGM-MNR: honestly] [V: think] [ARG1: he could beat the game in under three hours] ? \n",
+      "\n",
+      "COULD \n",
+      "  Did Uriah honestly think he [V: could] beat the game in under three hours ? \n",
+      "\n",
+      "BEAT \n",
+      "  Did Uriah honestly think [ARG0: he] [ARGM-MOD: could] [V: beat] [ARG1: the game] [ARGM-TMP: in under three hours] ? \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for verb in resp['verbs']:\n",
+    "    print(verb['verb'].upper(), '\\n ', verb['description'], '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Named Entity Recognition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 711306412/711306412 [02:38<00:00, 4480962.91B/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from allennlp.predictors.predictor import Predictor\n",
+    "predictor = Predictor.from_path(\"https://s3-us-west-2.amazonaws.com/allennlp/models/\"\n",
+    "                                \"ner-model-2018.12.18.tar.gz\")\n",
+    "resp = predictor.predict(\n",
+    "  sentence=\"AllenNLP is a PyTorch-based natural language processing library developed \"\n",
+    "           \"at the Allen Institute for Artificial Intelligence in Seattle.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORG AllenNLP\n",
+      "    is\n",
+      "    a\n",
+      "ORG PyTorch\n",
+      "    -\n",
+      "    based\n",
+      "    natural\n",
+      "    language\n",
+      "    processing\n",
+      "    library\n",
+      "    developed\n",
+      "    at\n",
+      "    the\n",
+      "ORG Allen Institute for Artificial Intelligence\n",
+      "    in\n",
+      "LOC Seattle\n",
+      "    .\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrase = []\n",
+    "for tag, word in zip(resp['tags'], resp['words']):\n",
+    "    if tag.startswith('U-'):\n",
+    "        print(tag.replace('U-', ''), word)\n",
+    "    elif tag == 'O':\n",
+    "        print('   ', word)\n",
+    "    elif tag.startswith('B-'):\n",
+    "        phrase.append(word)\n",
+    "    elif tag.startswith('I-'):\n",
+    "        phrase.append(word)\n",
+    "    elif tag.startswith('L-'):\n",
+    "        phrase.append(word)\n",
+    "        print(tag.replace('L-', ''), ' '.join(phrase))\n",
+    "        phrase = []\n",
+    "    else:\n",
+    "        print(\"PROBLEM\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other demos\n",
+    "\n",
+    "There are several additional interesing demos provided with the [AllenNLP model examples](https://allennlp.org/models).  Most likely more will be added over time. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleanup large cached models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm ~/.allennlp/cache/*\n",
+    "!rm -rf /tmp/*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Next Lesson\n",
     "\n",
     "**Enhancing an Image Classifier**: Libraries built on top of PyTorch offer very powerful tools for natural language processing.  Next we will return to image classification, and build on pretrained models as a demonstration of re-use neural networks.\n",
     "\n",
     "<a href=\"ImageClassifier.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
