--- a/NetworkExamples_0.ipynb
+++ b/NetworkExamples_0.ipynb
@@ -33,7 +33,7 @@
     "<font size=\"+1\">Generative Adversarial Networks (GAN)</font> \n",
     "<a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Reinforcement Learning</font>\n",
+    "<font size=\"+1\">Part of Speech Tagger</font>\n",
     "<a href=\"NetworkExamples_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>"
    ]
   },
