--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -122,7 +122,7 @@
     "## Tasks with Networks (cont)\n",
     "\n",
     "* Generative Adversarial Networks (GAN)\n",
-    "* Reinforcement Learning\n",
+    "* Part of Speech Tagger\n",
     "\n",
     "<div><a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
