--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -33,7 +33,7 @@
     "<font size=\"+1\">Generative Adversarial Networks (GAN)</font> \n",
     "<a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\"><u><b>Reinforcement Learning</b></u></font>\n",
+    "<font size=\"+1\"><u><b>Part of Speech Tagger</b></u></font>\n",
     "<a href=\"NetworkExamples_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>"
    ]
   },
@@ -41,9 +41,298 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reinforcement Learning\n",
+    "## Part of Speech Tagger\n",
     "\n",
-    "TODO"
+    "In this section we create an LSTM-based recurrent neural network to identify parts of speech.  This example is taken very closely from the official [PyTorch tutorial](https://pytorch.org/tutorials/beginner/nlp/sequence_models_tutorial.html#example-an-lstm-for-part-of-speech-tagging) by Robert Guthrie.  Some minor changes are made to the code and new commentary is introduced.\n",
+    "\n",
+    "The example we will look at here is enhanced and reworked and enhanced in an official AllenNLP tutorial that is also presented in the next chapter.  Comparing the styles of these two notebooks is a useful exercise.  The example here uses a very small toy training set; however, the same network *could* be trained against a robust corpus and produce reasonably good classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remembering state in a network\n",
+    "\n",
+    "As was mentioned briefly, the class of network layers called Recurrent Neural Networks are able to remember state within a layer. In the case of an LSTM (Long Short-term Memory) layer, there are extra tensors defining the *hidden state* along with the direct state of the weights for that layer.  The hidden state is able to remember information from arbitrary earlier states.\n",
+    "\n",
+    "In particular, an LSTM has three additional activation functions for the hidden state.  One activation function (also called a \"gate\") is the *input gate*, the next is the \"forget gate\", the last is the \"output gate.\"  Each of these gates is parameterized differently, and they each take the same inputs as would a fully-connected (linear) layer.  The key difference is that *some but not all* of the current hidden state will contribute to the input gate.\n",
+    "\n",
+    "Whether a particular neuron is involved in feedback is based simply on the activation of its output gate.  But as well, depending on the parameters to the forget gate and the inputs, that hidden neuron may become free to be retrained on new information.  An illustration at the [A.I. Wiki](https://skymind.ai/wiki/lstm#long) provides a good overview.\n",
+    "\n",
+    "![LSTM gating](img/gers_lstm.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7f8dceae3710>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "torch.manual_seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[-0.0187,  0.1713, -0.2944]],\n",
+      "\n",
+      "        [[-0.3521,  0.1026, -0.2971]],\n",
+      "\n",
+      "        [[-0.3191,  0.0781, -0.1957]],\n",
+      "\n",
+      "        [[-0.1634,  0.0941, -0.1637]],\n",
+      "\n",
+      "        [[-0.3368,  0.0959, -0.0538]]], grad_fn=<StackBackward>)\n",
+      "(tensor([[[-0.3368,  0.0959, -0.0538]]], grad_fn=<StackBackward>), tensor([[[-0.9825,  0.4715, -0.0633]]], grad_fn=<StackBackward>))\n"
+     ]
+    }
+   ],
+   "source": [
+    "lstm = nn.LSTM(3, 3)  # Input dim is 3, output dim is 3\n",
+    "inputs = [torch.randn(1, 3) for _ in range(5)]  # make a sequence of length 5\n",
+    "\n",
+    "# initialize the hidden state.\n",
+    "hidden = (torch.randn(1, 1, 3),\n",
+    "          torch.randn(1, 1, 3))\n",
+    "\n",
+    "for i in inputs:\n",
+    "    # Step through the sequence one element at a time.\n",
+    "    # after each step, hidden contains the hidden state.\n",
+    "    out, hidden = lstm(i.view(1, 1, -1), hidden)\n",
+    "\n",
+    "# alternatively, we can do the entire sequence all at once.\n",
+    "# the first value returned by LSTM is all of the hidden states throughout\n",
+    "# the sequence. the second is just the most recent hidden state\n",
+    "# (compare the last slice of \"out\" with \"hidden\" below, they are the same)\n",
+    "# The reason for this is that:\n",
+    "# \"out\" will give you access to all hidden states in the sequence\n",
+    "# \"hidden\" will allow you to continue the sequence and backpropagate,\n",
+    "# by passing it as an argument  to the lstm at a later time\n",
+    "# Add the extra 2nd dimension\n",
+    "inputs = torch.cat(inputs).view(len(inputs), 1, -1)\n",
+    "hidden = (torch.randn(1, 1, 3), torch.randn(1, 1, 3))  # clean out hidden state\n",
+    "out, hidden = lstm(inputs, hidden)\n",
+    "print(out)\n",
+    "print(hidden)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 0, 'dog': 1, 'ate': 2, 'apple': 3, 'we': 4, 'often': 5, 'pie': 6, 'everybody': 7, 'read': 8, 'that': 9, 'book': 10, 'do': 11, 'not': 12, 'me': 13}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prepare_sequence(seq, to_ix):\n",
+    "    idxs = [to_ix[w] for w in seq]\n",
+    "    return torch.tensor(idxs, dtype=torch.long)\n",
+    "\n",
+    "\n",
+    "training_data = [\n",
+    "    (\"the dog ate the apple\".split(), [\"DET\", \"NOUN\", \"VERB\", \"DET\", \"NOUN\"]),\n",
+    "    (\"we often ate pie\".split(), [\"PRON\", \"PART\", \"VERB\", \"NOUN\"]),\n",
+    "    (\"everybody read that book\".split(), [\"NOUN\", \"VERB\", \"DET\", \"NOUN\"]),\n",
+    "    (\"do not dog me\".split(), [\"VERB\", \"PART\", \"VERB\", \"PRON\"]),\n",
+    "    (\"do not dog the dog\".split(), [\"VERB\", \"PART\", \"VERB\", \"DET\", \"NOUN\"]),\n",
+    "    (\"we dog everybody\".split(), [\"PRON\", \"VERB\", \"NOUN\"])\n",
+    "]\n",
+    "word_to_ix = {}\n",
+    "for sent, tags in training_data:\n",
+    "    for word in sent:\n",
+    "        if word not in word_to_ix:\n",
+    "            word_to_ix[word] = len(word_to_ix)\n",
+    "            \n",
+    "print(word_to_ix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_to_ix = {\"DET\": 0, \"NOUN\": 1, \"VERB\": 2, \"PRON\": 3, \"PART\": 4}\n",
+    "ix_to_tag = {v:k for (k, v) in tag_to_ix.items()}\n",
+    "\n",
+    "# These will usually be more like 32 or 64 dimensional.\n",
+    "# We will keep them small, so we can see how the weights change as we train.\n",
+    "EMBEDDING_DIM = 6\n",
+    "HIDDEN_DIM = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LSTMTagger(nn.Module):\n",
+    "\n",
+    "    def __init__(self, embedding_dim, hidden_dim, vocab_size, tagset_size):\n",
+    "        super(LSTMTagger, self).__init__()\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "\n",
+    "        self.word_embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
+    "\n",
+    "        # The LSTM takes word embeddings as inputs, and outputs hidden states\n",
+    "        # with dimensionality hidden_dim.\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim)\n",
+    "\n",
+    "        # The linear layer that maps from hidden state space to tag space\n",
+    "        self.hidden2tag = nn.Linear(hidden_dim, tagset_size)\n",
+    "\n",
+    "    def forward(self, sentence):\n",
+    "        embeds = self.word_embeddings(sentence)\n",
+    "        lstm_out, _ = self.lstm(embeds.view(len(sentence), 1, -1))\n",
+    "        tag_space = self.hidden2tag(lstm_out.view(len(sentence), -1))\n",
+    "        tag_scores = F.log_softmax(tag_space, dim=1)\n",
+    "        return tag_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial\n",
+      "tensor([[-1.3415, -1.4094, -1.4865, -2.0375, -1.9824],\n",
+      "        [-1.3193, -1.4269, -1.6062, -1.9190, -1.9295],\n",
+      "        [-1.2652, -1.4732, -1.6676, -1.9118, -1.8832],\n",
+      "        [-1.3094, -1.3948, -1.6339, -1.9272, -1.9561],\n",
+      "        [-1.3424, -1.4249, -1.5009, -1.9967, -1.9693]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LSTMTagger(EMBEDDING_DIM, HIDDEN_DIM, len(word_to_ix), len(tag_to_ix))\n",
+    "loss_function = nn.NLLLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
+    "\n",
+    "# See what the scores are before training\n",
+    "# Note that element i,j of the output is the score for tag j for word i.\n",
+    "# Here we don't need to train, so the code is wrapped in torch.no_grad()\n",
+    "with torch.no_grad():\n",
+    "    inputs = prepare_sequence(training_data[0][0], word_to_ix)\n",
+    "    tag_scores = model(inputs)\n",
+    "    print('Initial')\n",
+    "    print(tag_scores)\n",
+    "\n",
+    "for epoch in range(300):  # again, normally you would NOT do 300 epochs, it is toy data\n",
+    "    for sentence, tags in training_data:\n",
+    "        # Step 1. Remember that Pytorch accumulates gradients.\n",
+    "        # We need to clear them out before each instance\n",
+    "        model.zero_grad()\n",
+    "\n",
+    "        # Step 2. Get our inputs ready for the network, that is, turn them into\n",
+    "        # Tensors of word indices.\n",
+    "        sentence_in = prepare_sequence(sentence, word_to_ix)\n",
+    "        targets = prepare_sequence(tags, tag_to_ix)\n",
+    "\n",
+    "        # Step 3. Run our forward pass.\n",
+    "        tag_scores = model(sentence_in)\n",
+    "\n",
+    "        # Step 4. Compute the loss, gradients, and update the parameters by\n",
+    "        #  calling optimizer.step()\n",
+    "        loss = loss_function(tag_scores, targets)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trained\n",
+      "tensor([[-0.0196, -4.4740, -7.2709, -5.2879, -6.0837],\n",
+      "        [-5.2160, -0.0580, -2.9891, -8.7630, -7.8053],\n",
+      "        [-6.8094, -4.1231, -0.0253, -4.9788, -7.1846],\n",
+      "        [-0.0213, -4.3791, -6.4513, -4.9825, -9.5001],\n",
+      "        [-4.3551, -0.0480, -3.4080, -8.7591, -7.1231]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# See what the scores are after training\n",
+    "with torch.no_grad():\n",
+    "    inputs = prepare_sequence(training_data[0][0], word_to_ix)\n",
+    "    tag_scores = model(inputs)\n",
+    "\n",
+    "    # The sentence is \"the dog ate the apple\".  i,j corresponds to score for tag j\n",
+    "    # for word i. The predicted tag is the maximum scoring tag.\n",
+    "    # Here, we can see the predicted sequence below is 0 1 2 0 1\n",
+    "    # since 0 is index of the maximum value of row 1,\n",
+    "    # 1 is the index of maximum value of row 2, etc.\n",
+    "    # Which is DET NOUN VERB DET NOUN, the correct sequence!\n",
+    "    print(\"Trained\")\n",
+    "    print(tag_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the[DET] dog[NOUN] read[VERB] the[DET] book[NOUN] \n",
+      "we[PRON] dog[VERB] the[DET] dog[NOUN] \n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data = [\n",
+    "    \"the dog read the book\".split(),\n",
+    "    \"we dog the dog\".split()\n",
+    "]\n",
+    "\n",
+    "for sentence in test_data:\n",
+    "    inputs = prepare_sequence(sentence, word_to_ix)\n",
+    "    for word, scores in zip(sentence, model(inputs)):\n",
+    "        best = torch.argmax(scores).item()\n",
+    "        part = ix_to_tag[best]\n",
+    "        print(f\"{word}[{part}]\", end=' ')\n",
+    "    print()"
    ]
   },
   {
